src/test/ui/feature-gates/feature-gate-const_generics_defaults.stderr
error[E0658]: default values for const generic parameters are experimental
  --> $DIR/feature-gate-const_generics_defaults.rs:2:25
   |
LL | struct A<const N: usize = 3>;
   |                         ^^^
   |
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information
   = help: add `#![feature(const_generics_defaults)]` to the crate attributes to enable

error[E0658]: default values for const generic parameters are experimental
  --> $DIR/feature-gate-const_generics_defaults.rs:6:22
   |
LL | fn foo<const B: bool = false>() {}
   |                      ^^^^^^^
   |
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information
   = help: add `#![feature(const_generics_defaults)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
